// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "yellow",
      "flex": 1,
      "flexDirection": "column",
      "padding": 16.25,
    }
  }
/>
`;

exports[`Container renders correctly 2`] = `
<View
  style={
    Object {
      "backgroundColor": "yellow",
      "flex": 1,
      "flexDirection": "row",
      "padding": 16.25,
    }
  }
/>
`;

exports[`Container renders correctly 3`] = `
<View
  style={
    Object {
      "backgroundColor": "yellow",
      "flex": 1,
      "flexDirection": "row-reverse",
      "padding": 16.25,
    }
  }
/>
`;

exports[`Container renders correctly 4`] = `
<View
  style={
    Object {
      "backgroundColor": "yellow",
      "flex": 1,
      "flexDirection": "column-reverse",
      "padding": 16.25,
    }
  }
/>
`;

exports[`Container renders correctly 5`] = `
<View
  style={
    Object {
      "flexDirection": "column",
      "padding": 16.25,
    }
  }
/>
`;

exports[`Container renders correctly expect flexDirection is column 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "yellow",
        "flex": 1,
        "flexDirection": "column",
        "padding": 16.25,
      }
    }
  />
</View>
`;

exports[`Container renders correctly expect flexDirection is column 2`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "column",
        "padding": 16.25,
      }
    }
  />
</View>
`;

exports[`Container renders correctly expect flexDirection is column-reverse 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "yellow",
        "flex": 1,
        "flexDirection": "column-reverse",
        "padding": 16.25,
      }
    }
  />
</View>
`;

exports[`Container renders correctly expect flexDirection is row 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "yellow",
        "flex": 1,
        "flexDirection": "row",
        "padding": 16.25,
      }
    }
  />
</View>
`;

exports[`Container renders correctly expect flexDirection is row-reverse 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "yellow",
        "flex": 1,
        "flexDirection": "row-reverse",
        "padding": 16.25,
      }
    }
  />
</View>
`;
